--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#SecretKEY JWT
+#coloco o nome que eu quiser, isso é uma variável:
+auth.jwt.secret=Chave.Muito.Foda.raw
+#1 dia em milisegundo:
+auth.jwt-expiration-milliseg=86400000
