--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.show-sql=true
 
 #SecretKEY JWT
 #coloco o nome que eu quiser, isso é uma variável:
-auth.jwt.secret=Chave.Muito.Foda.raw
+auth.jwt.secret=Chave.Muito.aaaaaaaaaaa.dfdfdafafraw
 #1 dia em milisegundo:
 auth.jwt-expiration-milliseg=86400000
